--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,25 @@ services:
     container_name: app-la-piedad
     ports:
     - "8080:80"
+
+  bd_mysql_la_piedad:
+    image: mysql:8.0
+    container_name: bd_mysql_la_piedad
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: bd_mysql_la_piedad
+    ports:
+      - '3306:3306'
+    volumes:
+      - vol__la_piedad:/var/lib/mysql  
+    networks:
+      - la_piedad_net
+      - la_piedad_proxy
+
+networks:
+  la_piedad_net:
+  la_piedad_proxy:
+    external: true
+
+volumes:
+  vol__la_piedad:
